# holocron

./: .env  README.md  main.py  pyproject.toml
files/: 1.txt  2.txt  3.txt  5.txt  6.txt  8.txt
modules/speak_module/: speak_module.py
